# Smart-Locker

./: .gitignore  .gitmodules  1.pro  CMakeLists.txt  Face detection.txt  FaceRecognition.cpp  FaceRecognition.h  README.md  build-deps.sh  ctrl.ui  ctrl2.cpp  ctrl2.h  ctrl2.ui  ctrl3.cpp  ctrl3.ui  ctrl4.h  ctrl4.ui  device.cpp  device.h  dlgfaceinput.cpp  dlgfaceinput.h  faceRecogniztion.pro  facerc.cpp  facerc.h  feature.index  featuregroup.cpp  main.cpp  mainwindow.cpp  mainwindow.h  qrc_images.cpp  readme  readme.md  ui_mainwindow.h  widget.cpp  widget.ui
UI/: README
UI/code/: README  ctrl.cpp  ctrl.h  ctrl3.h  ctrl4.cpp
UI/code 3.0/: README  mainwindow.cpp  嵌入式项目要求.docx
UI/code 4.0/: README  dlgfaceinput.cpp  dlgfaceinput.ui  mainwindow.cpp  mainwindow.ui
UI/code2.0/: README  ctrl.cpp  ctrl.ui  ctrl2.cpp  ctrl2.ui  ctrl3.cpp  ctrl3.h  ctrl3.ui  ctrl4.cpp  ctrl4.h  ctrl4.ui  main.cpp  widget.ui
faceRecog-rsp v2.0/: FeatureGroup.h  README  faceRecogniztion  faceRecogniztion.pro.user.73281ea  featuregroup.cpp  mainwindow.ui  moc_mainwindow.cpp
faceRecog-rspv1.0/: faceRecogniztion.pro  feature.index  readme  ui_dlgfaceinput.h
faceRecog-rspv3.0final/: Makefile  dlgfaceinput.ui  faceRecogniztion  faceRecogniztion.pro.user.05b923e.20  faceRecogniztion.pro.user.3107cb1  faceRecogniztion.pro.user.89bafda.4.8-pre1  images.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  readme  seeta_fr_v1.0.part6.rar  ui_dlgfaceinput.h
first version based on windows/: readme
recognition program/: pageoftakefacefailed.ui
the second version based on Linux/: readme
(+72 files in other folders)
